# mcp_updater

./: .gitignore  README.md  acceptance-checklist.md  dev-spec-mcp-project-updater.md  generate_mcp_client_configs.py  implementation-plan-mcp-project-updater.md  issue-index-help-false.md  mcp-client-setup.md  mcp_smoke_test.py  prd-mcp-project-updater.md  project.example.json  promote-existing-build.ps1  pyproject.toml  secrets.global.example.json  secrets.local.example.json  settings.global.example.json  telegram_notification_relay.py  update-mcp-project.ps1  update_mcp_project.py
mcp_project_updater/: __init__.py  cli.py  config.py  constants.py  docker_ops.py  errors.py  filesystem_cleanup.py  fingerprints.py  git_ops.py  lock.py  logging_setup.py  mcp_client_configs.py  mcp_container.py  metadata_repair.py  notifications.py  parser_runner.py  report_validator.py  rollback.py  secrets.py  settings.py  smoke_infrastructure.py  smoke_tool.py  source_detector.py  staging.py  state.py  switcher.py  utils.py
mcp_smoke_test/: __init__.py  cli.py  client.py  result.py
mcp_telegram_relay/: cli.py
tests/: config_helpers.py  conftest.py  test_cli.py  test_config.py  test_docker_ops.py  test_fingerprints.py  test_git_ops.py  test_lock.py  test_mcp_client_config_generator.py  test_mcp_container.py  test_mcp_smoke_test_client.py  test_metadata_repair.py  test_notifications.py  test_parser_runner.py  test_report_validator.py  test_rollback.py  test_smoke_infrastructure.py  test_smoke_tool.py  test_source_detector.py  test_staging.py  test_state.py  test_switcher.py  (+3 more)
(+2 files in other folders)
