[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-project-updater"
version = "0.1.0"
description = "MCP Project Updater"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = [
  "mcp_project_updater*",
  "mcp_smoke_test*",
  "mcp_telegram_relay*",
]
exclude = [
  "openspec*",
  "skills*",
  "tests*",
]
